Fixed some alignment issues

--- a/css/homeCSS.css
+++ b/css/homeCSS.css
@@ -25,11 +25,14 @@ header {
     padding: 1rem;
   }
 
+
+
 nav ul {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
+    align-items: center;
   }
   
 nav ul li {
@@ -140,7 +143,7 @@ img {
 }
 
 /* Contact Me */
-h1 {
+.contact {
     text-align: center;
     margin-top: 50px;
 }
@@ -184,19 +187,19 @@ input[type="submit"]:hover {
 
 /* Footer css for each page */
 footer {
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
-  text-align: center;
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
 }
 
 .wrapper {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .content {
-  flex: 1;
+    flex: 1;
 }
 
